# synapse-reporting-bot

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  reporting-bot  setup.py
reporting_bot/: __init__.py  config.py  main.py
