[tool.poetry]
name = "reporting-bot"
version = "0.0.1"
description = "Reporting Bot for synapse event_reports table"
authors = ["ThoreKr <thore@scimeda.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
matrix-nio = "^0.17.0"
environ-config = "^20.1.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
