[tool.poetry]
name = "reporting-bot"
version = "0.1.0"
description = "Reporting Bot for synapse event_reports table"
authors = ["ThoreKr <thore@scimeda.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
matrix-nio = "^0.25.2"
environ-config = "^24.1.0"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
